--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
   },
   "license": "MIT",
   "dependencies": {
-    "async": "^2.1.2",
-    "debug": "^2.2.0",
-    "elasticlunr": "^0.9.5"
+    "async": "^2.6.0",
+    "debug": "^3.1.0",
+    "elasticlunr": "^0.9.5",
+    "fs-extra": "^5.0.0"
   },
   "devDependencies": {
-    "assert-dir-equal": "^1.0.1",
-    "fs-extra": "^1.0.0",
-    "fs-readdir-recursive": "^1.0.0",
-    "metalsmith": "^2.1.0",
+    "assert-dir-equal": "^1.1.0",
+    "fs-extra": "^5.0.0",
+    "fs-readdir-recursive": "^1.1.0",
+    "metalsmith": "^2.3.0",
+    "nyc": "^11.4.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.5.1"
+    "tape": "^4.8.0"
   }
 }
