--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,18 @@
 language: node_js
 node_js:
-  - "7.0"
+  - "9.2"
+  - "9.0"
+  - "8.9"
+  - "8.0"
+env:
+  global:
+    - CC_TEST_REPORTER_ID=cce25600e801ad1ded6f62017ef3d0c12009403052530696c91f9d9ae4db0890
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - make test
+  - make coverage
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
