--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "fs-extra": "^5.0.0",
     "fs-readdir-recursive": "^1.1.0",
     "metalsmith": "^2.3.0",
-    "nyc": "^11.4.0",
-    "tap-spec": "^4.1.1",
-    "tape": "^4.8.0"
+    "tap": "^11.0.0"
   }
 }
